--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,39 @@
 asgiref==3.4.1
+attrs==21.2.0
+autobahn==21.3.1
+Automat==20.2.0
 autopep8==1.5.7
 boto3==1.18.40
 botocore==1.21.40
+cffi==1.14.6
+channels==3.0.4
+constantly==15.1.0
+cryptography==3.4.8
+daphne==3.0.2
 Django==3.2.7
 django-cors-headers==3.8.0
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.8.0
+hyperlink==21.0.0
+idna==3.2
+incremental==21.3.0
 jmespath==0.10.0
 psycopg2-binary==2.9.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycodestyle==2.7.0
+pycparser==2.20
 PyJWT==2.1.0
+pyOpenSSL==20.0.1
 python-dateutil==2.8.2
 pytz==2021.1
 s3transfer==0.5.0
+service-identity==21.1.0
 six==1.16.0
 sqlparse==0.4.2
 toml==0.10.2
+Twisted==21.7.0
+txaio==21.2.1
+typing-extensions==3.10.0.2
 urllib3==1.26.6
+zope.interface==5.4.0
