updated requirements file to add gunicorn

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Django==3.2.7
 django-cors-headers==3.8.0
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.8.0
+gunicorn==20.1.0
 hyperlink==21.0.0
 idna==3.2
 incremental==21.3.0
